--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ enforce_ssl: ''
 baseurl: ''
 description: Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
+  results) and in your feed.xml site description. Text
 keywords: test1, test2, etc
 desc: sample description
 avatar: ''
