--- a/_config.yml
+++ b/_config.yml
@@ -53,5 +53,5 @@ exclude:
 - node_modules
 - Gruntfile.js
 - package.json
-created-by: David Manzer, Kaseya
+created-by: Kaseya
 creator-url: http://www.kaseya.com
