--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ defaults:
     show-avatar: true
 gems:
 - jekyll-feed
-url: '/'
+url: ''
 enforce_ssl: ''
 baseurl: ''
 description: Write an awesome description for your new site here. You can edit this
@@ -54,4 +54,4 @@ exclude:
 - Gruntfile.js
 - package.json
 created-by: Kaseya
-creator-url: 
+creator-url:
