--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ defaults:
     show-avatar: true
 gems:
 - jekyll-feed
-url: ''
+url: 'vorex'
 enforce_ssl: ''
 baseurl: 'vorex'
 description: Write an awesome description for your new site here. You can edit this
