--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ defaults:
     show-avatar: true
 gems:
 - jekyll-feed
-url: 'vorex'
+url: ''
 enforce_ssl: ''
-baseurl: 'vorex'
+baseurl: '/'
 description: Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description. Text
