minor config edit

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ gems:
 - jekyll-feed
 url: ''
 enforce_ssl: ''
-baseurl: '/'
+baseurl: "./"
 description: Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description. Text
