--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@
 node_modules
 .sass-cache
 .jekyll-metadata
+Gemfile.lock
 
 # general
 .DS_Store
 Thumbs.db
 ehthumbs.db
+
+Gemfile.lock
+
+_site/Gemfile.lock
